--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,6 +7,13 @@
 </div>
 {{ end }}
 
+{{/* Helper to strip leading numbers from titles */}}
+{{ define "stripNumber" }}
+    {{ $title := . }}
+    {{ $title = replaceRE "^\\d+\\.\\s*" "" $title }}
+    {{ return $title }}
+{{ end }}
+
 {{ $showArchive := true }}
 {{ if .IsHome }}
     {{ $showArchive = false }}
@@ -40,7 +47,7 @@
                         {{ range .Pages }}
                         <li>
                             <span class="date-short">{{ .Date.Format "02" }}</span>
-                            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                            <a href="{{ .RelPermalink }}">{{ template "stripNumber" .Title }}</a>
                         </li>
                         {{ end }}
                     </ul>
@@ -50,7 +57,7 @@
                     <ul class="post-list">
                         {{ range .Pages.ByDate.Reverse }}
                         <li>
-                            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                            <a href="{{ .RelPermalink }}">{{ template "stripNumber" .Title }}</a>
                         </li>
                         {{ end }}
                     </ul>
@@ -61,14 +68,14 @@
         {{ end }}
 
     {{ else }}
-        
+
         <ul class="post-list" style="margin-top: 20px;">
             {{ range .RegularPages.ByDate.Reverse }}
             <li>
                 {{ if .Date }}
                 <span class="date-short" style="width: 50px;">{{ .Date.Format "2006" }}</span>
                 {{ end }}
-                <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                <a href="{{ .RelPermalink }}">{{ template "stripNumber" .Title }}</a>
             </li>
             {{ end }}
         </ul>
